fix: fixed images not showing on projects

--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -72,12 +72,6 @@
     border: 2px solid #0442c9;
     
   }
-  .profile_img:hover{
-    position: fixed;
-    left: 7em;
-    top: 7em;
-    transform: scale(2.0);
-  }
 
   .main{
     margin: 0 20px auto;
@@ -140,6 +134,14 @@ a{
 a:hover{
   color: rgb(4, 66, 201);
 }
+.projectLinks{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+
 .text_div div{
   min-width: 350px;
   max-width: 100%;
@@ -193,6 +195,7 @@ a:hover{
 }
 .card:hover{
   background-color: rgba(12, 12, 12, 0.8);
+  background-size: cover;
   box-shadow: 0px 0px 8px 2px rgb(5, 84, 255);
 }
 .card-title{
@@ -215,6 +218,14 @@ a:hover{
   border-radius: 10px;
   border: 2px solid #0442c9;
 }
+.card-link{
+  text-align: center;
+  color: white;
+  font-size: medium;
+  margin: 0px;
+  padding: 0px;
+}
+
 .cursor{
   color: #0554ff;
   position: fixed;
